...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="145"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="ho7-yT-Grz">
                                            <rect key="frame" x="16" y="86" width="343" height="49"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                            <accessibility key="accessibilityConfiguration" hint="Add a note about your mood" identifier="set mood note button" label="set mood note button"/>
                                            <state key="normal" title="Add Note"/>
                                            <connections>
                                                <action selector="presentMoodNoteController:" destination="fJm-WJ-Cyf" eventType="touchUpInside" id="CBJ-FW-iny"/>
                                            </connections>
                                        </button>
                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LbB-hc-tae">
                                            <rect key="frame" x="16" y="11" width="343" height="34"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" hint="Save this mood rating" identifier="save mood button" label="save mood button"/>
                                            <state key="normal" title="Save Mood"/>
                                            <connections>
                                                <action selector="doneButtonPressed:" destination="fJm-WJ-Cyf" eventType="touchUpInside" id="sXl-8N-q6d"/>
                                            </connections>
                                        </button>
                                        <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ymG-KL-FCQ">
                                            <rect key="frame" x="14" y="53" width="201" height="30"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                            <color key="tintColor" red="0.71373039484024048" green="0.71371680498123169" blue="0.71372604370117188" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                            <accessibility key="accessibilityConfiguration" identifier="mood slider" label="mood slider"/>
                                            <connections>
                                                <action selector="ratingChanged:" destination="fJm-WJ-Cyf" eventType="valueChanged" id="FxS-vn-GTe"/>
                                            </connections>
                                        </slider>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="/ max" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJJ-MQ-2tK">
                                            <rect key="frame" x="302" y="57" width="57" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="rating range" label="rating range"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lfL-qr-4hB">
                                            <rect key="frame" x="221" y="53" width="73" height="30"/>
...
            </objects>
            <point key="canvasLocation" x="4192" y="-526.23688155922048"/>
        </scene>
        <!--Record-->
        <scene sceneID="Kiu-Iy-IFB">
            <objects>
                <navigationController storyboardIdentifier="recordData" title="Record" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="81h-K0-B6G" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Record" image="hand-with-pen" id="AT6-Qk-6Ny"/>
                    <toolbarItems/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" translucent="NO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Dd7-zq-5ni">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E7v-99-JT8">
                                <rect key="frame" x="0.0" y="205" width="300" height="45"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <color key="backgroundColor" systemColor="labelColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="save dose button" label="save dose button"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
                                </state>
                                <state key="disabled">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
...
