...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Settings-->
        <scene sceneID="msT-sk-aop">
            <objects>
                <tableViewController title="Settings" id="fZJ-11-bhE" customClass="SettingsTableViewController" customModule="Introspective" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Xo-EX-SdH">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="574"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="general" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="general" textLabel="ykT-jw-7Pc" style="IBUITableViewCellStyleDefault" id="OmA-AA-bYA">
...
                                <rect key="frame" x="0.0" y="68" width="375" height="43.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xdC-we-CHO" id="R9I-qF-2Qz">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YeN-Ab-cPA">
                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="87"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mhd-a8-pb2">
                                            <rect key="frame" x="46" y="27" width="49" height="31"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="auto-ignore enabled" label="auto-ignore enabled"/>
                                            <connections>
                                                <action selector="switchToggled:" destination="6Hr-7L-LQp" eventType="valueChanged" id="L7F-lP-yFf"/>
                                            </connections>
                                        </switch>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ignore activities less than" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" 
                                            <rect key="frame" x="101" y="15" width="258" height="23"/>
...
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VTO-TR-QHx">
                                            <rect key="frame" x="101" y="47" width="185" height="30"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="auto-ignore seconds" label="auto-ignore seconds">
                                                <string key="hint">If an activity is completed before this many seconds have passed, it will not be saved. This only applies when tapping to stop a running activity on the record screen.</string>
                                            </accessibility>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                            <connections>
                                                <action selector="finishedEditingNumberOfSeconds:" destination="6Hr-7L-LQp" eventType="editingDidEnd" id="DxG-CQ-uBD"/>
...
