...

	public final override func viewDidLoad() {
		super.viewDidLoad()
		duration = injected(Settings.self).defaultSearchNearbyDuration
		updateUI()
		navigationItem.rightBarButtonItem = UIBarButtonItem(
			title: "Reset",
			style: .plain,
			target: self,
			action: #selector(reset)
		)

		injected(UiUtil.self).setBackButton(for: self, title: "Settings", action: #selector(done))
...
